# xz

./: .codespellrc  .gitattributes  .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Doxyfile.in  INSTALL  Makefile.am  NEWS  PACKAGERS  README  README.md  SECURITY.md  THANKS  TODO  autogen.sh  configure.ac  meson.build  meson_options.txt  version.sh
debug/: Makefile.am  crc32.c  full_flush.c  hex2bin.c  known_sizes.c  memusage.c  repeat.c  sync_flush.c  translation.bash  utf8-bidi-fmt-conv.bash
src/common/: bswap.h  common_w32res.rc  cpucores.h  integer.h  meson.build  my_allocator.h  my_landlock.h  mythread.h  open_stdxxx.h  physmem.h  sysdefs.h  tuklib_cgroup.c  tuklib_cgroup.h  tuklib_common.h  tuklib_config.h  tuklib_cpucores.c  tuklib_cpucores.h  tuklib_exit.c  tuklib_exit.h  tuklib_gettext.h  tuklib_integer.h  tuklib_mbstr.h  tuklib_mbstr_fw.c  tuklib_mbstr_nonprint.c  tuklib_mbstr_nonprint.h  tuklib_mbstr_width.c  tuklib_mbstr_wrap.c  tuklib_mbstr_wrap.h  tuklib_open_stdxxx.c  tuklib_open_stdxxx.h  tuklib_physmem.c  tuklib_physmem.h  tuklib_progname.c  tuklib_progname.h  w32_application.manifest.comments.txt
src/liblzma/: Makefile.am  liblzma.map  liblzma.pc.in  liblzma_generic.map  liblzma_linux.map  liblzma_w32res.rc  lzma.pc.in  meson.build  validate_map.sh
src/liblzma/api/: Makefile.am  lzma.h
src/liblzma/check/: Makefile.am  Makefile.inc  check.c  check.h  check_byteswap.h  check_init.c  crc32.c  crc32_aarch64.h  crc32_arm64.h  crc32_fast.c  crc32_init.c  crc32_loongarch.h  crc32_rvv.h  crc32_small.c  crc32_table.c  crc32_table_be.h  crc32_table_le.h  crc32_tablegen.c  crc32_x86.S  crc32_x86.s  crc64.c  crc64_fast.c  crc64_init.c  crc64_small.c  crc64_table.c  crc64_table_be.h  crc64_table_le.h  crc64_tablegen.c  crc64_x86.S  crc64_x86.s  crc_clmul.c  crc_common.h  crc_macros.h  crc_x86_clmul.h  sha256.c
src/liblzma/common/: Makefile.am  Makefile.inc  alignment.c  allocator.c  alone_decoder.c  alone_decoder.h  alone_encoder.c  auto_decoder.c  block_buffer_decoder.c  block_buffer_encoder.c  block_buffer_encoder.h  block_decoder.c  block_decoder.h  block_encoder.c  block_encoder.h  block_header_decoder.c  block_header_encoder.c  block_private.h  block_util.c  bsr.h  chunk_size.c  code.c  common.c  common.h  copy_coder.c  copy_coder.h  delta_coder.c  delta_coder.h  delta_common.c  delta_common.h  delta_decoder.c  delta_decoder.h  delta_encoder.c  delta_encoder.h  easy.c  easy_buffer_encoder.c  easy_common.c  easy_common.h  easy_decoder_memusage.c  easy_encoder.c  (+82 more)
src/liblzma/delta/: Makefile.am  Makefile.inc  delta_common.c  delta_common.h  delta_decoder.c  delta_decoder.h  delta_encoder.c  delta_encoder.h  delta_private.h
src/liblzma/lz/: Makefile.am  Makefile.inc  bt2.c  bt2.h  bt3.c  bt3.h  bt4.c  bt4.h  hc3.c  hc3.h  hc4.c  hc4.h  lz_decoder.c  lz_decoder.h  lz_encoder.c  lz_encoder.h  lz_encoder_hash.h  lz_encoder_mf.c  lz_encoder_private.h  match_c.h  match_h.h
src/liblzma/lzma/: Makefile.am  Makefile.inc  fastpos.h  fastpos_tablegen.c  lzma2_decoder.c  lzma2_decoder.h  lzma2_encoder.c  lzma2_encoder.h  lzma_common.h  lzma_decoder.c  lzma_decoder.h  lzma_encoder.c  lzma_encoder.h  lzma_encoder_features.c  lzma_encoder_getoptimum.c  lzma_encoder_getoptimumfast.c  lzma_encoder_init.c  lzma_encoder_optimum_fast.c  (+6 more)
src/lzma/: Makefile.am  alloc.c  alloc.h  args.c  args.h  error.c  error.h  hardware.c  hardware.h  help.c  help.h  io.c  io.h  list.c  main.c  message.h  options.c  options.h  private.h  process.c  process.h  suffix.c  suffix.h  util.c  util.h
src/lzmainfo/: Makefile.am  lzmainfo.1  lzmainfo.c  lzmainfo_w32res.rc  meson.build
src/scripts/: Makefile.am  lzdiff  lzdiff.1  lzgrep  lzgrep.1  lzmore  lzmore.1  meson.build  xzdiff  xzdiff.1  xzdiff.in  xzgrep  xzgrep.1  xzgrep.in  xzless.1  xzless.in  xzmore  xzmore.1  xzmore.in
src/xz/: Makefile.am  args.c  args.h  coder.c  coder.h  file_io.c  file_io.h  hardware.c  hardware.h  io.c  io.h  list.c  list.h  main.c  main.h  meson.build  message.c  message.h  mytime.c  mytime.h  options.c  options.h  private.h  process.c  process.h  sandbox.c  sandbox.h  signals.c  signals.h  suffix.c  suffix.h  util.c  util.h  xz.1  xz_w32res.rc
src/xzdec/: Makefile.am  lzmadec_w32res.rc  meson.build  xzdec.1  xzdec.c  xzdec_w32res.rc
tests/: Makefile.am  bcj_test.c  code_coverage.sh  compress_prepared_bcj_sparc  compress_prepared_bcj_x86  create_compress_files.c  meson.build  test_bcj_exact_size.c  test_block.c  test_block_header.c  test_cgroup.sh  test_check.c  test_compress.sh  test_compress_prepared_bcj_sparc  test_compress_prepared_bcj_x86  test_error_messages.c  test_files.sh  test_filter_flags.c  test_filter_str.c  test_hardware.c  test_index.c  test_index_hash.c  test_info.c  test_linux_cgroup.sh  test_lzip_decoder.c  test_memlimit.c  test_microlzma.c  test_recursive.sh  test_scripts.sh  test_stream_buffer_decode.c  test_stream_buffer_encode.c  test_stream_flags.c  test_suffix.sh  test_vli.c  tests.cmake  tests.h  tuktest.h
tests/files/: README  bad-0-backward_size.lzma  bad-0-empty-truncated.lzma  bad-0-index-1.xz  bad-0-nonempty_index.lzma  bad-0cat-alone.lzma  bad-0catpad-empty.lzma  bad-0pad-empty.lzma  bad-1-block_header-1.lzma  bad-1-block_header-2.lzma  bad-1-block_header-3.lzma  bad-1-block_header-3.xz  bad-1-block_header-4.lzma  bad-1-block_header-4.xz  bad-1-check-crc32.lzma  bad-1-check-crc64.lzma  bad-1-check-sha256.lzma  bad-1-check-sha256.xz  bad-1-lzma2-1.lzma  bad-1-lzma2-1.xz  bad-1-lzma2-2.lzma  bad-1-lzma2-3.lzma  bad-1-lzma2-3.xz  bad-1-lzma2-4.lzma  bad-1-lzma2-5.lzma  bad-1-lzma2-5.xz  bad-1-lzma2-6.lzma  bad-1-lzma2-6.xz  bad-1-lzma2-7.lzma  bad-1-lzma2-7.xz  bad-1-lzma2-9.xz  bad-1-stream_flags-1.lzma  bad-1-stream_flags-1.xz  bad-1-stream_flags-2.lzma  bad-1-stream_flags-2.xz  bad-1-stream_flags-3.lzma  bad-1-stream_flags-3.xz  bad-1-vli-1.lzma  bad-1-vli-1.xz  bad-1-vli-2.lzma  (+112 more)
tests/ossfuzz/: Makefile  fuzz_block_header.c  fuzz_common.h  fuzz_decode_alone.c  fuzz_decode_index.c  fuzz_decode_stream.c  fuzz_encode_stream.c  fuzz_index_decoder.c  fuzz_stream_flags.c
(+246 files in other folders)
